Fix missing background color

--- a/src/main.css
+++ b/src/main.css
@@ -139,11 +139,11 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: fixed;
 
     top: 0;
     left: 0;
-    z-index: 3;
+    z-index: 200;
 
     margin: 2vw;
     width: 6vw;
@@ -165,13 +165,14 @@ html {
     transform: rotate(180deg);
 }
 
-[data-id="2261087"] {
+.page.container[data-id="2261087"] {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
 
+    background-color: black;
     opacity: 0;
     visibility: hidden;
 
@@ -180,7 +181,7 @@ html {
     transition-duration: 600ms;
 }
 
-[data-id="2261087"].is-visible {
+.page.container[data-id="2261087"].is-visible {
     opacity: 1;
     visibility: visible;
 
